[package]
name = "pyo3_macro"
version = "0.1.4"
edition = "2021"
authors = ["Li-Hsing Liu <austin362667@gmail.com>"]
description = """
A Rust macro crate builds PyO3-compatible Rust `protobuf` and `gRPC` structures.
So you can easily expose your generated protobuf code as Pythin binding through PyO3.

## Features
1. Macro `with_new` that implements `__new__` constructor for Rust Python binding.
2. Macro `with_pyclass` that adds customized `pyclass` attributes macro for your Rust structures."

"""
repository = "https://github.com/austin362667/pyo3_macro"
homepage = "https://github.com/austin362667/pyo3_macro"
documentation = "https://docs.rs/pyo3_macro"
license = "Apache-2.0"
readme = "README.md"
keywords = ["macro", "pyo3", "pyclass", "constructor", "python"]
categories = []
exclude = ["proto"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features= ["full"] }
quote = "1.0"
